// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContractOverview should render contracts-table 1`] = `
<contract-overview
  overviewStore={[Function Object]}
  router={[Function Object]}
>
  <div
    class="spinner-outlet"
  >
  </div><contract-table />
</contract-overview>
`;

exports[`ContractOverview should render error message 1`] = `
<contract-overview
  overviewStore={[Function Object]}
  router={[Function Object]}
>
  <nx-error>
    An error occurred
  </nx-error><div
    class="spinner-outlet"
  >
  </div>
</contract-overview>
`;

exports[`ContractOverview should render loading-spinner 1`] = `
<contract-overview
  overviewStore={[Function Object]}
  router={[Function Object]}
>
  <div
    class="spinner-outlet"
  >
    <nx-spinner
      size="medium"
    />
  </div>
</contract-overview>
`;
